Fixes gap between navbar and body
Tested on widescreen (my own pc) and various other sizes!

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body{
-	margin: 0;
+	margin: -17px;
 	font-family: 'Roboto Condensed', sans-serif;
 	background: #f5f5f1;
 }
